; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libarchive/tar/extr_creation_set.c__cleanup_filters.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libarchive/tar/extr_creation_set.c__cleanup_filters.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.filter_set = type { %struct.filter_set* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.filter_set*, i32)* @_cleanup_filters to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_cleanup_filters(%struct.filter_set* %0, i32 %1) #0 {
  %3 = alloca %struct.filter_set*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.filter_set* %0, %struct.filter_set** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %18, %2
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp slt i32 %7, %8
  br i1 %9, label %10, label %21

10:                                               ; preds = %6
  %11 = load %struct.filter_set*, %struct.filter_set** %3, align 8
  %12 = load i32, i32* %5, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds %struct.filter_set, %struct.filter_set* %11, i64 %13
  %15 = getelementptr inbounds %struct.filter_set, %struct.filter_set* %14, i32 0, i32 0
  %16 = load %struct.filter_set*, %struct.filter_set** %15, align 8
  %17 = call i32 @free(%struct.filter_set* %16)
  br label %18

18:                                               ; preds = %10
  %19 = load i32, i32* %5, align 4
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %5, align 4
  br label %6

21:                                               ; preds = %6
  %22 = load %struct.filter_set*, %struct.filter_set** %3, align 8
  %23 = call i32 @free(%struct.filter_set* %22)
  ret void
}

declare dso_local i32 @free(%struct.filter_set*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
